리팩토링: PostImageRequest에서 postId 필드 삭제, PostImage에 @JsonManagedReference & @JsonBackReference 적용
- PostImageRequest 클래스에서 postId 필드를 삭제했습니다.
- PostImage 클래스에 @JsonManagedReference와 @JsonBackReference를 적용하여 JSON 직렬화 처리 방식을 개선했습니다.
- support 페이지 레이아웃 참조 수정: layout:decorate 속성에서 ~{layouts/layouts}를 ~{layouts/layout}로 변경했습니다.